fix: Fix display of headers on mobile devices

--- a/client/src/components/allNews/index.scss
+++ b/client/src/components/allNews/index.scss
@@ -10,6 +10,7 @@ article{
         font-size: 2.5em;
         font-weight: 900;
         text-align: center;
+        padding: 20px;
     }
 
     div{
