--- a/client/src/components/wrcLinksBar/index.scss
+++ b/client/src/components/wrcLinksBar/index.scss
@@ -13,6 +13,7 @@
             font-size: 2.5em;
             font-weight: 900;
             text-align: center;
+            padding: 20px;
         }
 
         a{
