--- a/client/src/pages/singleNews/index.scss
+++ b/client/src/pages/singleNews/index.scss
@@ -18,6 +18,7 @@ article{
             font-weight: 900;
             text-align: center;
             width: 100%;
+            padding: 20px;
         }
 
         .date{
